# physics

./: .gitignore  CMakeLists.txt  README.md  circle.f90  circle_info.f90  commands.txt  main.f90  quadratic  quadratic.f90
ch03/oscillation/: oscillation.cpp
ch03/oscillation/test/: input.txt
ch03/scattering/: scattering.cpp
examples/ch03/oscillation/: animate.gp  input.txt  output.txt
examples/ch03/scattering/: input1.txt  input2.txt  input3.txt  output1.txt  output2.txt  output3.txt  output4.txt  plot.gp
examples/ch04/: input_4-7.txt  input_4-8.txt  plot.gp
lib/futil/: futil.cpp  futil.h
lib/mutil/: interp.cpp  interp.h
lib/util/: util.cpp  util.h
src/ch03/: oscillation.cpp  scattering.cpp
src/ch04/: exercises.cpp
